# filepattern

./: .ghci  .ghcid  .gitignore  .hlint.yaml  .travis.yml  .weeder.yaml  CHANGES.txt  README.md  filepattern.cabal
.github/workflows/: ci.yml
src/: Test.hs
src/System/: FilePattern.hs
src/System/FilePattern/: Core.hs  Core2.hs  Directory.hs  Legacy.hs  ListBy.hs  Monads.hs  Parser.hs  Step.hs  Tree.hs  Type.hs  Wildcard.hs
test/: Test.hs
test/Test/: Cases.hs  IO.hs  Util.hs
